--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cool-ascii-faces": "^1.3.4",
     "ecstatic": "^1.4.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "redux": "^3.6.0",
+    "redux-saga": "^0.14.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
