--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "cool-ascii-faces": "^1.3.4",
     "ecstatic": "^1.4.0",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "redux": "^3.6.0",
@@ -24,6 +26,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
     "expect": "^1.20.2",
     "webpack": "^2.3.1"
   }
