--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "redux": "^3.6.0",
-    "redux-saga": "^0.14.3"
+    "redux-saga": "^0.14.3",
+    "reselect": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
