--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.3",
     "reselect": "^3.0.0"
@@ -29,6 +30,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
+    "deep-freeze": "0.0.1",
     "expect": "^1.20.2",
     "webpack": "^2.3.1"
   }
