--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.0",
+    "redux-ignore": "^1.2.4",
     "redux-saga": "^0.14.3",
     "reselect": "^3.0.0"
   },
