--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-stage-0": "^6.22.0",
     "deep-freeze": "0.0.1",
     "expect": "^1.20.2",
+    "mocha": "^3.2.0",
     "webpack": "^2.3.1"
   }
 }
