--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-core/register test/*.js",
     "webpack": "webpack"
   },
   "author": "",
@@ -21,7 +21,6 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
-    "redux-devtools-extension": "^2.13.0",
     "redux-ignore": "^1.2.4",
     "redux-saga": "^0.14.3",
     "reselect": "^3.0.0"
@@ -29,12 +28,21 @@
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
+    "babel-register": "^6.24.0",
     "deep-freeze": "0.0.1",
     "expect": "^1.20.2",
     "mocha": "^3.2.0",
     "webpack": "^2.3.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "react",
+      "stage-0"
+    ]
   }
 }
